Bug: Removed background-color from media query
Now the nav buttons let the radial-gradient appear under the buttons.

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -133,7 +133,6 @@
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    background-color: var(--color-primary);
 
     .control {
       margin: .6rem 1rem !important;
